front-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ais-service-demo
  name: ais-demo-liberty
  labels:
    app: ais-demo-liberty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ais-demo-liberty
  template:
    metadata:
      labels:
        app: ais-demo-liberty
    spec:
      containers:
        - name: ais-demo-liberty-container
          image: image-registry.openshift-image-registry.svc:5000/ais-service-demo/$APP_NAME:$BUILD_NUMBER
          imagePullPolicy: IfNotPresent
          ports:
          - name: https
            containerPort: 9443
          - name: http
            containerPort: 9080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 128Mi
