front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ais-demo-frontend
  namespace: ais-service-demo
  labels:
    app: ais-demo-frontend
spec:
  ports:
  - name: http
    port: 9080
    protocol: TCP
    targetPort: 9080
  - name: https
    port: 9443
    protocol: TCP
    targetPort: 9443
  selector:
    app: ais-demo-frontend-app
